Synched all install languages with upstream https://github.com/FrontAccountingERP/FA/commit/74a49d03b2e819fa55da40a7e385f7daeb681081

--- a/FA24Mods/install/lang/nb_NO/LC_MESSAGES/nb_NO.po
+++ b/FA24Mods/install/lang/nb_NO/LC_MESSAGES/nb_NO.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-27 20:22+0200\n"
-"PO-Revision-Date: 2018-03-29 21:38+0530\n"
+"POT-Creation-Date: 2018-05-31 23:08+0200\n"
+"PO-Revision-Date: 2018-06-01 09:10+0530\n"
 "Last-Translator: Ap.Muthu <apmuthu@usa.net>, 2018\n"
 "Language-Team: Norwegian Bokmål (Norway) (https://www.transifex.com/gnuacademy/teams/55037/nb_NO/)\n"
 "MIME-Version: 1.0\n"
@@ -540,3 +540,11 @@ msgstr ""
 #: install/index.php:364
 msgid "Set Only Port value if you cannot use the default port 3306."
 msgstr "Sett Bare Port verdi hvis du ikke kan bruke standard port 3306."
+
+#: install/index.php:361
+msgid ""
+"Use database user/password with permissions to create new database, or use "
+"proper credentials for previously created empty database."
+msgstr ""
+"Bruk database bruker / passord med tillatelser til å opprette ny database, eller bruk "
+"riktig legitimasjon for tidligere opprettet tom database."
