Work Order Report rep402 option for GL rows and re-run https://github.com/FrontAccountingERP/FA/commit/d8d40a67b517dd35425a1fa0eb02f84c3f9fd843 https://github.com/FrontAccountingERP/FA/commit/98bf5bfc72317d45e356e3909a8cd1fdf5181176#diff-a6f3cc34ce57584774e16a07fdaef200 http://frontaccounting.com/punbb/viewtopic.php?pid=31785#p31785

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2018-06-04 Joe Hunt
+Work Order Report rep402 option for GL rows and re-run
+M	reporting/rep402.php
+M	reporting/reports_main.php
+
 2018-06-01 Janusz Dobrowolski
 Synched all install languages with upstream
 M	install/lang/ar_EG/LC_MESSAGES/ar_EG.po	ar_EG.po
