Wrong standard cost for AP Surf Set with rerun for wrong type https://github.com/FrontAccountingERP/FA/commit/95f98ed74ac6379b95e2ceb1eb0c9bbcd36fd4a9 https://github.com/FrontAccountingERP/FA/commit/32700e43822b5d4afc03747849bd21ff1cd82ea5 http://frontaccounting.com/punbb/viewtopic.php?id=7554

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-06-12 Joe Hunt
+Wrong standard cost for AP Surf Set with rerun for wrong type
+M	sql/en_US-demo.sql
+
 2018-06-04 Joe Hunt
 Work Order Report rep402 option for GL rows and re-run
 M	reporting/rep402.php
