AP Surf Set in demo data rerun https://github.com/FrontAccountingERP/FA/commit/5107ceab65e06486e878c9013dbb3c5036618b95 http://frontaccounting.com/punbb/viewtopic.php?id=7554 http://frontaccounting.com/punbb/viewtopic.php?pid=31935#p31935

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-06-18
+AP Surf Set in demo data rerun
+M	sql/en_US-demo.sql
+
 2018-06-16
 Report 102 Aged Customer Analysis SQL fix
 M	purchasing/includes/db/suppliers_db.inc
