Fiscal year delete leads to undefined variable $total. Fixed. https://github.com/FrontAccountingERP/FA/commit/8c1a0401f6ad9191f18e5caf68126dce94002736 http://frontaccounting.com/punbb/viewtopic.php?id=7610

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-07-12
+Fiscal year delete leads to undefined variable $total. Fixed.
+M	admin/db/fiscalyears_db.inc
+
 2018-06-18
 AP Surf Set in demo data rerun
 M	sql/en_US-demo.sql
