--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,12 +1,16 @@
-2018-07-12
+2018-07-12 Joe Hunt
+Stock goes negative even if negative inventory is turned off. Fix by @kvvaradha
+M	admin/void_transaction.php
+
+2018-07-12 Joe Hunt
 Fiscal year delete leads to undefined variable $total. Fixed.
 M	admin/db/fiscalyears_db.inc
 
-2018-06-18
+2018-06-18 Joe Hunt
 AP Surf Set in demo data rerun
 M	sql/en_US-demo.sql
 
-2018-06-16
+2018-06-16 Joe Hunt
 Report 102 Aged Customer Analysis SQL fix
 M	purchasing/includes/db/suppliers_db.inc
  
