Marker in Void Transactions fixed https://github.com/FrontAccountingERP/FA/commit/a7e711f2718d867380952b884f6cbb839d818a78 http://frontaccounting.com/punbb/viewtopic.php?id=7658 When a Transaction is selected to be voided in FA, it was not highlighted.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-08-11 Joe Hunt
+Marker in Void Transactions fixed
+M	admin/void_transaction.php
+
+2018-08-11 Joe Hunt
 Whitespace corrections
 M	admin/void_transaction.php
 
