Solution for item editable description https://github.com/FrontAccountingERP/FA/commit/41bdd7820211334cef5c087889e6cd5e6e45af86 http://frontaccounting.com/punbb/viewtopic.php?id=7569 Select box okay, in textbox, could not add item - now fixed

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-08-11 Joe Hunt
+Solution for item editable description
+M	includes/ui/ui_view.inc
+
+2018-08-11 Joe Hunt
 Marker in Void Transactions fixed
 M	admin/void_transaction.php
 
