Avoid running same query multiple times. Rep307.php. Fixed https://github.com/FrontAccountingERP/FA/commit/f01da91c553b7d256b053475c0f5dc026c47c10d http://frontaccounting.com/punbb/viewtopic.php?id=7661

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
-2018-08-11 Joe Hunt
+2018-08-12 Joe Hunt
+Avoid running same query multiple times. Rep307.php. Fixed
+M	reporting/rep307.php
+
+2018-08-12 Joe Hunt
 Solution for item editable description
 M	includes/ui/ui_view.inc
 
