Removed redundant sql sentences in Report Filters. https://github.com/FrontAccountingERP/FA/commit/9f832e8ab3c679ab67e5d086a99774dac58e004a http://frontaccounting.com/punbb/viewtopic.php?pid=32442#p32442 https://github.com/kvcodes/FA/commit/922d687abbeca94d3fcd53d90adc89cc4f245581

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-08-19 Joe Hunt
+Removed redundant sql sentences in Report Filters.
+M	reporting/includes/reports_classes.inc
+
 2018-08-12 Joe Hunt
 Avoid running same query multiple times. Rep307.php. Fixed
 M	reporting/rep307.php
