--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-08-19 Joe Hunt
+Fixed bug in Report Supplier Balances.
+M	reporting/rep201.php
+
+2018-08-19 Joe Hunt
 Removed redundant sql sentences in Report Filters.
 M	reporting/includes/reports_classes.inc
 
