Whitespace changes to sales_order_ui.inc on commit and rollback https://github.com/FrontAccountingERP/FA/commit/83deea7b5eccd2af94b78a3688415871fd92e188 https://github.com/FrontAccountingERP/FA/commit/2e2c1956eb2f82eebc95878752a19a376cc89485 http://frontaccounting.com/punbb/viewtopic.php?pid=32519#p32519 http://frontaccounting.com/punbb/viewtopic.php?id=7670

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-08-23 Joe Hunt
+Whitespace changes to sales_order_ui.inc on commit and rollback
+M	sales/includes/ui/sales_order_ui.inc
+
 2018-08-19 Joe Hunt
 Fixed bug in Report Supplier Balances.
 M	reporting/rep201.php
