@braathwaate Bug 4563: rep308 costed inventory movements do not reconcile. https://github.com/FrontAccountingERP/FA/commit/65e616be727190bf216daac6a14ee253873e9f3c New translation strings: "Total Movement" and "Total Out"

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-08-26 Joe Hunt
+@braathwaate Bug 4563: rep308 costed inventory movements do not reconcile.
+M	reporting/rep308.php
+
 2018-08-23 Joe Hunt
 Whitespace changes to sales_order_ui.inc on commit and rollback
 M	sales/includes/ui/sales_order_ui.inc
