@braathwaate Bug 4617: Initialised missing variable $memo in work order costing https://github.com/FrontAccountingERP/FA/commit/4bb6535b5a8c42b9e2be05e4acb75444d8a2ccf0

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-08-26 Joe Hunt
+@braathwaate Bug 4617: Initialised missing variable $memo in work order costing
+M	manufacturing/includes/db/work_order_costing_db.inc
+
+2018-08-26 Joe Hunt
 @braathwaate Bug 4563: rep308 costed inventory movements do not reconcile.
 M	reporting/rep308.php
 
