Bug 4577: Ajax confirmation dialog ignored user answer in Sales Order cancellation. https://github.com/FrontAccountingERP/FA/commit/df7f937b907a56545b865f637084b12fa88b9f07

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-08-26 Janusz Dobrowolski
+Bug 4577: Ajax confirmation dialog ignored user answer in Sales Order cancellation.
+M	js/inserts.js
+
 2018-08-26 Joe Hunt
 @braathwaate Bug 4617: Initialised missing variable $memo in work order costing
 M	manufacturing/includes/db/work_order_costing_db.inc
