Rerun @notrinos: Update material cost when quantity on hand is zero. https://github.com/FrontAccountingERP/FA/commit/b72c2a0476688017a61969cbc35dd7cffb4ed78e https://github.com/FrontAccountingERP/FA/commit/ca3af895c069979d693a98c49255a48664061cd4#r30345033 http://frontaccounting.com/punbb/viewtopic.php?id=7568

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-08-31 Joe Hunt
+Rerun @notrinos: Update material cost when quantity on hand is zero.
+M	manufacturing/includes/db/work_order_costing_db.inc
+
 2018-08-30 Joe Hunt
 @braathwaate: FA 2.4.4 no longer displays 0.00 Sales Invoices in customer_inquiry - Fixed.
 M	sales/includes/db/cust_trans_db.inc
