@notrinos: Fixed error creating customer credit note: Undefined index: sales_gl_code https://github.com/FrontAccountingERP/FA/commit/e01ce098c8862750e2f4f66f255191e83a4ce1d6 http://frontaccounting.com/punbb/viewtopic.php?id=7696

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-09-12 Joe Hunt
+@notrinos: Fixed error creating customer credit note: Undefined index: sales_gl_code
+M	taxes/tax_calc.inc
+
 2018-08-31 Joe Hunt
 Rerun @braathwaate Bug 4601: memo line not cleared after enter new payment item.
 M	gl/includes/ui/gl_journal_ui.inc
