@notrinos: Left to allocate fixed and rerun https://github.com/FrontAccountingERP/FA/commit/35859a9eeec414240fe0bb94af128ab84ee4e278 https://github.com/FrontAccountingERP/FA/commit/05b1dfa59ebab4c769f916135289918fe43d3932 http://frontaccounting.com/punbb/viewtopic.php?id=7698

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-09-13 Joe Hunt
+@notrinos: Left to allocate fixed and rerun
+M	includes/ui/ui_view.inc
+
 2018-09-12 Joe Hunt
 @notrinos: Fixed error creating customer credit note: Undefined index: sales_gl_code
 M	taxes/tax_calc.inc
