--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-09-15 Joe Hunt
+@notrinos: Fixed Line break in supplier_list_cells when label is null
+M	includes/ui/ui_lists.inc
+
 2018-09-13 Joe Hunt
 @notrinos: Left to allocate fixed and rerun
 M	includes/ui/ui_view.inc
