@braathwaate 0004641: items->transactions should not show QOH for service items. Fixed by disabling transactions when non inventory item. https://github.com/FrontAccountingERP/FA/commit/bdeb340a0330f79b276d47252ea09ce7d9afad3c

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-10-02 Joe Hunt
+@braathwaate 0004641: items->transactions should not show QOH for service items. Fixed by disabling transactions when non inventory item.
+M	inventory/manage/items.php
+
 2018-09-17 Janusz Dobrowolski
 Fixed comment for crm_contacts table in init sql files.
 M	sql/en_US-demo.sql
