--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-10-06 Joe Hunt
+@braathwaate: Fixed Customer statement reflecting wrong balance. 
+M	reporting/rep108.php
+
 2018-10-02 Joe Hunt
 @braathwaate 0004641: items->transactions should not show QOH for service items. Fixed by disabling transactions when non inventory item.
 M	inventory/manage/items.php
