Work Order voided reference reusage, costing and reporting issues fixed
[0004212] Work Order Entry: fixed error when voided WO reference is reused.
https://github.com/FrontAccountingERP/FA/commit/da7df35c61205d0b1af47d286be591b8a3194b0c
[0004216] Print Work Orders: database error fixed when voided WO is in selected range.
https://github.com/FrontAccountingERP/FA/commit/5a3cbfe6d2df1c8c32edcab8bf93e8a8432a15fc
[0004735] Search Outstanding Work Orders: voided work orders excluded.
https://github.com/FrontAccountingERP/FA/commit/e9edcdc75487682714ecf16d682d49d0a332abc9
[0004734] Fixed bug in costing procedure for produced items.
https://github.com/FrontAccountingERP/FA/commit/15f5d4e7ced46ba0a452bda74e50d97dcbf09798

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2018-10-11 Janusz Dobrowolski
+Work Order voided reference reusage, costing and reporting issues fixed
+M	manufacturing/includes/db/work_orders_db.inc
+M	reporting/includes/reports_classes.inc
+M	reporting/rep409.php
+M	manufacturing/includes/db/work_order_costing_db.inc
+
 2018-10-06 Joe Hunt
 @braathwaate: Fixed Customer statement reflecting wrong balance. 
 M	reporting/rep108.php
