[0004475] Modifying Journal Transaction: fixed form layout for gl edition containing subaccount. https://github.com/FrontAccountingERP/FA/commit/2c1fd4d2298616be9bcc9672b4a0aedf9ee78399

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-10-12 Janusz Dobrowolski
+[0004475] Modifying Journal Transaction: fixed form layout for gl edition containing subaccount.
+M	includes/ui/items_cart.inc
+
+2018-10-12 Janusz Dobrowolski
 [0004736] Items: item cloning did not preserved value for non-editable fields.
 M	inventory/manage/items.php
 
