--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-10-24 Janusz Dobrowolski
+[0004594] Suppliers: inactive tax groups should not appear in tax group selector for new supplier.
+M	includes/ui/ui_lists.inc
+
 2018-10-12 Janusz Dobrowolski
 [0004475] Modifying Journal Transaction: fixed form layout for gl edition containing subaccount.
 M	includes/ui/items_cart.inc
