@notrinos: Fixed deprecated each() function in PHP 7.2 (tcpdf.php / fpdi.php) https://github.com/FrontAccountingERP/FA/commit/cefa241faeedaa123418679f6e7adf92dd7409cd https://github.com/FrontAccountingERP/FA/commit/33c457f253099a4207e652452bf11868b8f0a3ec http://frontaccounting.com/punbb/viewtopic.php?id=7777 http://frontaccounting.com/punbb/viewtopic.php?pid=33046#p33046

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2018-10-26 Joe Hunt
+@notrinos: Fixed deprecated each() function in PHP 7.2 (tcpdf.php / fpdi.php)
+M	reporting/includes/tcpdf.php
+M	reporting/includes/fpdi/fpdi
+
 2018-10-24 Janusz Dobrowolski
 [0004594] Suppliers: inactive tax groups should not appear in tax group selector for new supplier.
 M	includes/ui/ui_lists.inc
