@cleal: fixed count() in reports_classes.inc:37 https://github.com/FrontAccountingERP/FA/commit/b000177603f696dff19481b628ef283cdd5a2881 http://frontaccounting.com/punbb/viewtopic.php?id=7782

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-10-29 Joe Hunt
+@cleal: fixed count() in reports_classes.inc:37
+M	reporting/includes/reports_classes.inc
+
 2018-10-26 Joe Hunt
 @notrinos: Fixed deprecated each() function in PHP 7.2 (tcpdf.php / fpdi.php)
 M	reporting/includes/tcpdf.php
