@notrinos: Added input data checks for company prefs and GL setup https://github.com/FrontAccountingERP/FA/commit/dc0d95db1363aa1dc34153154f99bcc72528ab5b https://github.com/FrontAccountingERP/FA/commit/b40b482e5b9c85bab9c871696213ce60f2dff92c http://frontaccounting.com/punbb/viewtopic.php?id=7832

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2018-10-13/18 Joe Hunt
+@notrinos: Added input data checks for company prefs and GL setup
+M	admin/company_preferences.php
+M	admin/gl_setup.php
+
 2018-11-05 Janusz Dobrowolski
 Cleanups fixing obscure numeric references to some sql helpers results.
 M	dimensions/dimension_entry.php
