--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-10-19 Joe Hunt
+0004760: @braathwaate speeded up last_sales_order_detail function sql
+M	sales/includes/db/sales_order_db.inc
+
 2018-10-13/18 Joe Hunt
 @notrinos: Added input data checks for company prefs and GL setup
 M	admin/company_preferences.php
