@notrinos: Added Company Setup Option to Open Print Dialog Direct on Reports https://github.com/FrontAccountingERP/FA/commit/561e44e6af27c09236aa0ae3aa83cb7097b534c8 http://frontaccounting.com/punbb/viewtopic.php?pid=32959#p32959

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,11 @@
+2018-10-20 Joe Hunt
+@notrinos: Added Company Setup Option to Open Print Dialog Direct on Reports
+M	admin/company_preferences.php
+M	reporting/includes/pdf_report.inc
+M	sql/alter2.4.php
+M	sql/en_US-demo.sql
+M	sql/en_US-new.sql
+
 2018-10-19 Joe Hunt
 0004760: @braathwaate speeded up last_sales_order_detail function sql
 M	sales/includes/db/sales_order_db.inc
