@mugao-EM / @Andijani: Fixed Revaluation amount posted wrongly. https://github.com/FrontAccountingERP/FA/commit/621721b7edf789a4aab42407a758811db21c9f19 http://frontaccounting.com/punbb/viewtopic.php?id=7811 This was already so in FA v2.3.x which needs no correction.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-10-22 Joe Hunt
+@mugao-EM / @Andijani: Fixed Revaluation amount posted wrongly.
+M	gl/includes/db/gl_db_banking.inc
+
 2018-10-20 Joe Hunt
 @notrinos: Added Company Setup Option to Open Print Dialog Direct on Reports
 M	admin/company_preferences.php
