@kvvaradha: Fixed Customer Balance Showing wrong Outstanding balance (Journal Entry allocation) https://github.com/FrontAccountingERP/FA/commit/6c8d7acf89e69a5b09b32dfbbe8fdeb9716fc1e3 http://frontaccounting.com/punbb/viewtopic.php?id=7838 This commit is eligible to be backported to FA 2.3 as well

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-10-22 Joe Hunt
+@kvvaradha: Fixed Customer Balance Showing wrong Outstanding balance (Journal Entry allocation)
+M	reporting/rep101.php
+
+2018-10-22 Joe Hunt
 @mugao-EM / @Andijani: Fixed Revaluation amount posted wrongly.
 M	gl/includes/db/gl_db_banking.inc
 
