--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2018-10-24 Joe Hunt
+@kvvaradha: PO Delivery does not show the Supplier name in GL transactions report.
+M	gl/includes/db/gl_db_trans.inc
+M	reporting/rep704.php
+
 2018-10-22 Joe Hunt
 @kvvaradha: Fixed Customer Balance Showing wrong Outstanding balance (Journal Entry allocation)
 M	reporting/rep101.php
