--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-10-28 Joe Hunt
+0004760: Rerun of last_sales_order_detail function sql
+M	sales/includes/db/sales_order_db.inc
+
 2018-10-24 Joe Hunt
 @kvvaradha: PO Delivery does not show the Supplier name in GL transactions report.
 M	gl/includes/db/gl_db_trans.inc
