FA 2.4.5 https://github.com/FrontAccountingERP/FA/commit/979b959a7d8b62b214768170d72396658b367e1c https://sourceforge.net/projects/frontaccounting/files/FrontAccounting%202.4/2.4.5/frontaccounting-2.4.5.tar.gz http://frontaccounting.com/punbb/viewtopic.php?id=7865

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-12-06 Janusz Dobrowolski
+FA 2.4.5
+M	version.php
+
+2018-12-05 Janusz Dobrowolski
 Updated gettext template
 M	lang/new_language_template/LC_MESSAGES/empty.po
 
