Fixed Bug in count_array(), /includes/ui/ui_globals.inc and re-run https://github.com/FrontAccountingERP/FA/commit/9d80cf79e07e777e75bfa9ca4c1b5a8c64567a30 http://frontaccounting.com/punbb/viewtopic.php?pid=33641#p33641 https://github.com/FrontAccountingERP/FA/commit/1cb30c52557b88f88e798febf995836fc2638c8c http://frontaccounting.com/punbb/viewtopic.php?pid=33605#p33605

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-12-16 Joe Hunt
+Fixed Bug in count_array(), /includes/ui/ui_globals.inc and re-run.
+M	includes/ui/ui_globals.inc
+
 2018-12-06 Janusz Dobrowolski
 FA 2.4.5
 M	version.php
