--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-12-16 Joe Hunt
+Fixed a non well formed numeric value encountered rep102.php
+M	reporting/rep102.php
+
+2018-12-16 Joe Hunt
 Fixed Bug in count_array(), /includes/ui/ui_globals.inc and re-run.
 M	includes/ui/ui_globals.inc
 
