Pressing Batch button in Invoice against Deliveries - missing index fixed. https://github.com/FrontAccountingERP/FA/commit/79b3e7b61a7d52f7d589c84efa973531eef28b16 http://frontaccounting.com/punbb/viewtopic.php?id=7893 Checks for $_POST['Sel_'] first.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-12-16 Joe Hunt
+Pressing Batch button in Invoice against Deliveries - missing index fixed.
+M	sales/inquiry/sales_deliveries_view.php
+
+2018-12-16 Joe Hunt
 Fixed a non well formed numeric value encountered rep102.php
 M	reporting/rep102.php
 
