--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-12-17 Joe Hunt
+Non well formed numeric value in rep202.php fixed
+M	reporting/rep202.php
+
 2018-12-16 Joe Hunt
 Pressing Batch button in Invoice against Deliveries - missing index fixed.
 M	sales/inquiry/sales_deliveries_view.php
