Credit Notes were never seen in View Sales Order. Fixed. https://github.com/FrontAccountingERP/FA/commit/9f584e5d02aca175a14aaf58f70a6fb840853468 http://frontaccounting.com/punbb/viewtopic.php?id=7895

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-12-17 Joe Hunt
+Credit Notes were never seen in View Sales Order. Fixed.
+M	sales/view/view_sales_order.php
+
+2018-12-17 Joe Hunt
 Non well formed numeric value in rep202.php fixed
 M	reporting/rep202.php
 
