@notrinos: EXCHANGE-RATES.ORG added as default reliable rate provider https://github.com/FrontAccountingERP/FA/commit/d3984ba646e017c6fd301e3e90d8ce0c7b584a1d http://frontaccounting.com/punbb/viewtopic.php?id=7718

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2018-12-17 Joe Hunt
+@notrinos: EXCHANGE-RATES.ORG added as default reliable rate provider
+M	config.default.php
+M	gl/includes/db/gl_db_rates.inc
+
+2018-12-17 Joe Hunt
 Credit Notes were never seen in View Sales Order. Fixed.
 M	sales/view/view_sales_order.php
 
