Changed Journal # to GL # in GL Trans View. https://github.com/FrontAccountingERP/FA/commit/d3984ba646e017c6fd301e3e90d8ce0c7b584a1d http://frontaccounting.com/punbb/viewtopic.php?pid=33677#p33677 The Journal # (new translatable string "GL #") in GL trans view has transactions closed by 'Closing GL Transactions' in Banking & General Ledger. Trailing tab synched with upstream of previous commit in config.default.php.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2018-12-18 Joe Hunt
+Changed Journal # to GL # in GL Trans View.
+M	gl/inquiry/journal_inquiry.php
+M	gl/view/gl_trans_view.php
+M	includes/ui/ui_view.inc
+
 2018-12-17 Joe Hunt
 @notrinos: EXCHANGE-RATES.ORG added as default reliable rate provider
 M	config.default.php
