--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,10 @@
 2018-12-19 Joe Hunt
+@braathwaate 4811: magnifying glass select on deposits/payments erroneously shows bank account gl accounts. Fixed.
+M	gl/includes/db/gl_db_accounts.inc
+M	gl/inquiry/accounts_list.php
+M	includes/ui/ui_lists.inc
+
+2018-12-19 Joe Hunt
 @braathwaate: 4796: Entering customer payment with a bank charge equal to the total amount results in database error. Fixed.
 M	sales/customer_payments.php
 
