@braathwaate: 4821: banking overdraft message has php errors. Fixed. https://github.com/FrontAccountingERP/FA/commit/8f6852edc4c77026234c05c20235c8fe00f59631 Fixed typo in fix for 4796

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2018-12-19 Joe Hunt
+@braathwaate: 4821: banking overdraft message has php errors. Fixed.
+M	gl/gl_bank.php
+M	gl/includes/db/gl_db_bank_trans.inc
+
+2018-12-19 Joe Hunt
 @braathwaate 4811: magnifying glass select on deposits/payments erroneously shows bank account gl accounts. Fixed.
 M	gl/includes/db/gl_db_accounts.inc
 M	gl/inquiry/accounts_list.php
