@boxygen: Added Customer / Supplier Trial Balance Reports and 2 re-runs https://github.com/FrontAccountingERP/FA/commit/d7b2df429bf66654536ffafeb5a3d1e034653374 https://github.com/FrontAccountingERP/FA/commit/393fc0d3cfcbf7de823cc580a1088ce3c8b18a3a https://github.com/FrontAccountingERP/FA/commit/5a1af3cc83d7324192412f47122fff13d854303e http://frontaccounting.com/punbb/viewtopic.php?id=7897

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2018-12-21 Joe Hunt
+@boxygen: Added Customer / Supplier Trial Balance Reports and 2 re-runs
+M	reporting/rep115.php
+M	reporting/rep201.php
+M	reporting/rep206.php
+M	reporting/reports_main.php
+
 2018-12-20 Joe Hunt
 @notrinos: Added CCA. Fixed ECB, and EXCHANGE-RATES.ORG providers
 M	config.default.php
