Gettext template update. https://github.com/FrontAccountingERP/FA/commit/945847f3857149a9a455f0728a0350dc3da22855

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-12-23 Janusz Dobrowolski
+Gettext template update.
+M	lang/new_language_template/LC_MESSAGES/empty.po
+
+2018-12-23 Janusz Dobrowolski
 Attach Documents: fixed SQL injection vulnerability.
 M	admin/db/transactions_db.inc
 M	includes/references.inc
