--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,11 @@
 2018-12-23 Janusz Dobrowolski
+Update README.md, removed obsolete install/update info, added list of contributors.
+M	README.md
+D	install.html
+D	update.html
+M	doc/license.txt
+
+2018-12-23 Janusz Dobrowolski
 Gettext template update.
 M	lang/new_language_template/LC_MESSAGES/empty.po
 
