Report Stock Check Sheet is now testing for valid barcodes. Available Barcode Types: EAN, EAN-8, EAN-13, GTIN-8, GTIN-12, GTIN-14, UPC, UPC-12 coupon code, EAN if 'Using Barcodes' is enabled. https://github.com/FrontAccountingERP/FA/commit/61fc8ffef2312c7d8c223d9322cc3b8fbe7aa27f http://frontaccounting.com/punbb/viewtopic.php?id=7898 Not using this barcode checking for now in FA24Mods.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-12-23 Joe Hunt
+Report Stock Check Sheet is now testing for valid barcodes of EAN, EAN-8, EAN-13, GTIN-8, GTIN-12, GTIN-14, UPC, UPC-12 coupon code, EAN if 'Using Barcodes' is enabled.
+M	reporting/rep303.php
+
 2018-12-23 Janusz Dobrowolski
 Update README.md, removed obsolete install/update info, added list of contributors.
 M	README.md
