--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-12-24 Joe Hunt
+FA 2.4.6
+M	version.php
+
 2018-12-23 Joe Hunt
 Report Stock Check Sheet is now testing for valid barcodes of EAN, EAN-8, EAN-13, GTIN-8, GTIN-12, GTIN-14, UPC, UPC-12 coupon code, EAN if 'Using Barcodes' is enabled.
 M	reporting/rep303.php
