--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-01-07 Joe Hunt
+@apmuthu: Optimized function get_trans_tax_details()
+M	gl/includes/db/gl_db_trans.inc
+
 2019-01-05 Joe Hunt
 @kvvaradha: Date Picker to close when clicked outside of the datepicker.
 M	includes/ui/ui_view.inc
