--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-01-08 Janusz Dobrowolski
+New transaction reference formats {FF}/{FFFF} for fiscal years starting on other than January 1st.
+M	includes/references.inc
+
 2019-01-07 Joe Hunt
 @apmuthu: Optimized function get_trans_tax_details()
 M	gl/includes/db/gl_db_trans.inc
