--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2019-01-08 Joe Hunt
+@braathwaate bug 4817: g/l account inquiry can timeout due to slow sql.
+M	gl/includes/db/gl_db_trans.inc
+M	gl/inquiry/gl_account_inquiry.php
+
 2019-01-08 Janusz Dobrowolski
 New transaction reference formats {FF}/{FFFF} for fiscal years starting on other than January 1st.
 M	includes/references.inc
