--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-01-08 Joe Hunt
+Password reset mail big delay fix using From: email in header.
+M	includes/current_user.inc
+
+2019-01-08 Joe Hunt
 @braathwaate bug 4817: g/l account inquiry can timeout due to slow sql.
 M	gl/includes/db/gl_db_trans.inc
 M	gl/inquiry/gl_account_inquiry.php
