Quick Entries: fixed false warning. https://github.com/FrontAccountingERP/FA/commit/1723f5fc5b851f20ae52da2e4a0104437f1a97b4

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-01-10 Janusz Dobrowolski
+Quick Entries: fixed false warning.
+M	gl/manage/gl_quick_entries.php
+
+2019-01-10 Janusz Dobrowolski
 Fixed allocation date for customer payments entry, additional fixes for strict sql mode.
 M	includes/db/audit_trail_db.inc
 M	sales/customer_payments.php
