Fixed get_post() support for numeric fields. https://github.com/FrontAccountingERP/FA/commit/df660a601cabb0afe7f3246884f16207b9a0c314

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2019-01-10 Janusz Dobrowolski
+Fixed get_post() support for numeric fields.
+M	admin/display_prefs.php (jointly fixed in earlier commit)
+M	includes/ui/ui_controls.inc
+
+2019-01-10 Janusz Dobrowolski
 Quick Entries: fixed false warning.
 M	gl/manage/gl_quick_entries.php
 
