--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-01-11 Joe Hunt
+@notrinos: Update Material Cost Function - rollback and rerun
+M	manufacturing/includes/db/work_order_costing_db.inc
+
 2019-01-10 Janusz Dobrowolski
 Fixed get_post() support for numeric fields.
 M	admin/display_prefs.php (jointly fixed in earlier commit)
