--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-01-16 Joe Hunt
+@boxygen: Placeholders now allowed for Dimensions
+M	includes/references.inc
+
 2019-01-14 Joe Hunt
 @notrinos: wrong command symbol in ui_list.inc fixed
 M	includes/ui/ui_lists.inc
