--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,18 @@
 2019-01-16 Joe Hunt
+Removed all double semicolon line endings in code files
+M	admin\attachments.php
+M	fixed_assets\includes\fa_classes_db.inc
+M	gl\includes\db\gl_db_trans.inc
+M	inventory\view\view_transfer.php
+M	js\behaviour.js
+M	manufacturing\view\wo_issue_view.php
+M	purchasing\view\view_po.php
+M	reporting\rep451.php
+M	sales\customer_credit_invoice.php
+M	sales\includes\db\customers_db.inc
+M	taxes\tax_groups.php
+
+2019-01-16 Joe Hunt
 @boxygen: Placeholders now allowed for Dimensions
 M	includes/references.inc
 
