Relaxed sql_mode set on DB init for backwards compatibility on backup restoration. https://github.com/FrontAccountingERP/FA/commit/f727374771773225a431a213de98aca84684f558

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-01-20 Janusz Dobrowolski
+Relaxed sql_mode set on DB init for backwards compatibility on backup restoration.
+M	admin/db/maintenance_db.inc
+
 2019-01-16 Joe Hunt
 Removed all double semicolon line endings in code files
 M	admin\attachments.php
