@kvvaradha: items_cart class logical bug fixed. https://github.com/FrontAccountingERP/FA/commit/80ca7521c46b75b495e626835207227194d6e200 http://frontaccounting.com/punbb/viewtopic.php?id=7964

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-01-23 Joe Hunt
+@kvvaradha: items_cart class logical bug fixed.
+M	includes/ui/items_cart.inc
+
 2019-01-22 Joe Hunt
 Updated 2 core COAs with demo data only in the demo variant.
 M	sql/en_US-demo.sql
