@kvvaradha: Sales DB and UI bug fixed with re-run https://github.com/FrontAccountingERP/FA/commit/2b72a281444cc5d220901fb7a7e8749a0cf8f56b https://github.com/FrontAccountingERP/FA/commit/f478f47620e7f7e5d0b30357309e14afb7b12af6 http://frontaccounting.com/punbb/viewtopic.php?id=7967 http://frontaccounting.com/punbb/viewtopic.php?id=7966

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2019-01-24 Joe Hunt
+@kvvaradha: Sales DB and UI bug fixed with re-run
+M	sales/includes/sales_db.inc
+M	sales/includes/ui/sales_order_ui.inc
+
 2019-01-23 Joe Hunt
 @kvvaradha: items_cart class logical bug fixed.
 M	includes/ui/items_cart.inc
