--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-01-25 Janusz Dobrowolski
+Additional sql strict mode related fix in add_trans_tax_details().
+M	gl/includes/db/gl_db_trans.inc
+
 2019-01-24 Joe Hunt
 @kvvaradha: Sales DB and UI bug fixed with re-run
 M	sales/includes/sales_db.inc
