--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-01-29 Joe Hunt
+@anoopmb: Item units bug fixed and re-run
+M	inventory/includes/db/items_units_db.inc
+
 2019-01-25 Janusz Dobrowolski
 Additional sql strict mode related fix in add_trans_tax_details().
 M	gl/includes/db/gl_db_trans.inc
