@kvvaradha: Customer balance Report rep101.php extra parameter removed https://github.com/FrontAccountingERP/FA/commit/27361234b9405d19fe1a12fcf4048f29335125fb http://frontaccounting.com/punbb/viewtopic.php?id=7995

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-02-13 Joe Hunt
+@kvvaradha: Customer balance Report rep101.php extra parameter removed
+M	reporting/rep101.php
+
 2019-01-29 Joe Hunt
 @anoopmb: Item units bug fixed and re-run
 M	inventory/includes/db/items_units_db.inc
