Process Depreciation: hardcoded fiscal years constraint removed. https://github.com/FrontAccountingERP/FA/commit/99b2a5de9ef5ac1cbf73a597b5870da20d7c6b79 http://frontaccounting.com/punbb/viewtopic.php?id=7982

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2019-02-13 Janusz Dobrowolski
+Process Depreciation: hardcoded fiscal years constraint removed.
+M	includes/data_checks.inc
+M	includes/ui/ui_lists.inc
+
 2019-02-13 Joe Hunt
 @kvvaradha: Customer balance Report rep101.php extra parameter removed
 M	reporting/rep101.php
